fixup front text to be more readabel

--- a/static/custom.css
+++ b/static/custom.css
@@ -215,3 +215,13 @@ margin-bottom: 0;
 .image-checkbox-checked .fa {
   display: block !important;
 }
+
+.img-back {
+  background-color: black;
+  opacity: 0.6;
+}
+
+.img-text {
+  color: white;
+  opacity:1.0 !important;
+}
